tests/should_fail/logic_alias/trait_alias_to_non_trait.stderr
error: Cannot use #[logic_alias] in this context, because type S does not implement trait T.
  --> trait_alias_to_non_trait.rs:17:5
   |
17 |     #[logic_alias(S::is_zero(x@))]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> trait_alias_to_non_trait.rs:18:5
   |
18 |     fn is_zero(x: i64) -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: logic function defined here
  --> trait_alias_to_non_trait.rs:11:5
   |
11 |     fn is_zero(x: Int) -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `logic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

